
TESTS to do before releasing:
- ADIF log Import
- LoTW log Import
- Edit QSO. Check how data comes from DB to the UI.
    - Attention to name

- Receive QSOs from WSJTX:
    - check if they are properly imported to the log.
    - Test a dupe QSO, a message should be shown


TBD - 2.4
- Enhancement: Ported from Qt5 to Qt6.
- Enhancement: Refactoring of several classes.
- Enhancement: SQLi protection of some queries.
- Enhancement: Improve how the cty.csv file (countries file) is read.
- Enhancement: Update the entities table to make UTC real instead of int (e.g. India is -5.5 UTC)
- Enhancement: Function to import QSOs from WSJTX.
- BugFix: Fixed the ISO name for Togo.
- BugFix: Country fix read failed with complex prefixes.
- Bugfix: CQ & ITU zones may be wrong for callsigns from specific DXCC if coming from WSJTX.
- Bugfix: ClubLog date was not properly managed.

Mar 2024 - 2.3.4
- BugFix: After Editing a QSO, lotw_qsl_rcvd is emptied (Closes #656, #659) (TNX N6PAZ, EA5WA)
- Bugfix: Keep data of SAT tab when entering a QSO stopped working. (TNX EA5WA)
- BugFix: When editing a split QSO, if TX Frequency is modified, split is disabled and frequencies made equal. (EA5WA)
- BugFix: Incorrect CQ zone saved to DataBase (Closes #666) (EA5WA)
- BugFix: FO/x calls are not properly identified/stored (Closes #677) (EA5WA)
- BugFix: Minor CQz & ITUz bugfixes that could, potentially accept CQ or ITU zones being 0.
- Bugfix: Several fields do not meet ADIF specification (Closes #669)
- Bugfix: DX-Cluster activity file can't be edit with normal txt file. (Closes #682)
- Bugfix: QSO_COMPLETE field in database needs to be redefined (Closes #680)
- Bugfix: QRZ.com QSO status was not properly working. (Closes #664)
- Bugfix: Alternative location for logbook.dat was not working properly (Closes #653)
- Bugfix: Clarify how to use mode / submode in the DB (Closes #650)
- Bugfix: Cleared some warning errors about the DB notbeing created in the console.